[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/gameover.gd" type="Script" id=1]
[ext_resource path="res://fonts/audiowide.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/audiowide-large.tres" type="DynamicFont" id=3]


[node name="gameover" type="Node2D"]
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 670.86
margin_top = 317.102
margin_right = 926.86
margin_bottom = 338.102
custom_fonts/font = ExtResource( 2 )
text = "Congratulations! Your score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 706.868
margin_top = 358.493
margin_right = 884.868
margin_bottom = 400.493
custom_fonts/font = ExtResource( 3 )
text = "123123123"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 676.267
margin_top = 463.473
margin_right = 854.267
margin_bottom = 484.473
custom_fonts/font = ExtResource( 2 )
text = "Enter your Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="."]
margin_left = 675.469
margin_top = 491.74
margin_right = 868.469
margin_bottom = 525.74
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Your name ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 675.318
margin_top = 535.427
margin_right = 748.318
margin_bottom = 562.427
custom_fonts/font = ExtResource( 2 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="TextEdit" to="." method="_on_TextEdit_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
